--- a/Initial Scripts/parseText/package.json
+++ b/Initial Scripts/parseText/package.json
@@ -16,6 +16,7 @@
     "@google/generative-ai": "^0.3.1",
     "dotenv": "^16.4.5",
     "google-auth-library": "^9.7.0",
-    "mongoose": "^8.2.3"
+    "mongoose": "^8.2.3",
+    "parsetext": "file:"
   }
 }
